syntax = "proto3";

package api.v1.capabilities;

// The service for getting operator capabilities
service Service {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse) {}
  rpc GetPlugins(GetPluginsRequest) returns (GetPluginsResponse) {}
}

message GetRequest {}

message GetResponse {
  bool ingress = 1;
  bool has_prometheus_service_monitor = 2;
  bool has_custom_metrics = 3;
  bool has_vertical_pod_autoscaler = 4;
}

message GetConfigRequest {}

message GetConfigResponse {
  string yaml = 1;
}

message GetPluginsRequest {}

message GetPluginsResponse {
  message Builtin {
    string name = 1;
  }

  message Thirdparty {
    string name = 1;
    string image = 2;
    string original_name = 3;
  }

  message Plugin {
    oneof plugin {
      Builtin builtin = 1;
      Thirdparty third_party = 2;
    }
  }

  repeated Plugin plugins = 1;
}
